issue#4 fixed gap in header-display

--- a/@hubblecommerce/hubble/core/assets/scss/hubble/components/hubble.scss
+++ b/@hubblecommerce/hubble/core/assets/scss/hubble/components/hubble.scss
@@ -150,7 +150,7 @@
     .header-wrp {
         position: fixed;
         margin: 0 auto;
-        width: 100%;
+        width: 100vw;
         z-index: 100;
     }
 
